--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,5 @@
+-include ../config.mak
+
 SHSRCS=	bltin/printf.c bltin/test.c bltin/times.c \
 	alias.c arith_yacc.c arith_yylex.c cd.c error.c eval.c \
 	exec.c expand.c \
@@ -9,16 +11,16 @@ GENSRCS= builtins.c nodes.c syntax.c init.c
 GENHDRS= builtins.h nodes.h syntax.h token.h token_vars.h
 SRCS= ${SHSRCS} ${GENSRCS} ${GENHDRS}
 OBJS= ${SRCS:.c=.o}
+STATIC_LIBS= ../lib/toybox/libtoybox.a ../lib/tcc/libtcc.a
 
-CFLAGS+= -DHAVE_CONFIG_H -I. -I.. -include ../config.h -DBSD=1 -DSHELL -DDEBUG=1 -Wall -g -O2
+CFLAGS+= -DHAVE_CONFIG_H -I. -I.. -include ../config.h -DBSD=1 -DSHELL -DDEBUG=1 -Wall
 CFLAGS+= '-DCONFIG_TRIPLET="x86_64-linux-gnu"' -DTCC_TARGET_X86_64 -DONE_SOURCE=0
 CFLAGS+= -DCONFIG_TCC_BCHECK=0 -DCONFIG_TCC_BACKTRACE=0
 
 all: dash
 
-dash: ${GENHDRS} ${OBJS}
-	rm -f ../lib/toybox/generated/obj/main.o
-	${CC} -o $@ ${OBJS} ../lib/toybox/generated/obj/*.o ../lib/tcc/libtcc.a ${LDFLAGS} ${LIBS} -g
+dash: ${GENHDRS} libtcc1a.h ${OBJS} ${STATIC_LIBS}
+	${CC} -o $@ ${OBJS} ${STATIC_LIBS} ${LDFLAGS} ${LIBS}
 
 CLEANFILES= ${GENSRCS} ${GENHDRS} ${OBJS} dash mknodes mksyntax mkinit
 
