--- a/toybox.config
+++ b/toybox.config
@@ -68,7 +68,7 @@ CONFIG_PWD=y
 CONFIG_RENICE=y
 CONFIG_RM=y
 CONFIG_RMDIR=y
-# CONFIG_SED is not set
+CONFIG_SED=y
 CONFIG_SLEEP=y
 CONFIG_SORT=y
 CONFIG_SORT_FLOAT=y
