Fix parallel make

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@ SHSRCS=	bltin/printf.c bltin/test.c bltin/times.c \
 	input.c jobs.c mail.c main.c memalloc.c miscbltin.c \
 	mystring.c options.c output.c parser.c redir.c show.c \
 	signames.c trap.c var.c \
-	toybox.c tcc.o
+	toybox.c tcc.c
 GENSRCS= builtins.c nodes.c syntax.c init.c
 GENHDRS= builtins.h nodes.h syntax.h token.h token_vars.h
 SRCS= ${SHSRCS} ${GENSRCS} ${GENHDRS}
@@ -26,8 +26,6 @@ CLEANFILES= ${GENSRCS} ${GENHDRS} ${OBJS} dash mknodes mksyntax mkinit
 
 clean:
 	rm -f ${CLEANFILES}
-
-build-tools: mknodes mksyntax
 
 builtins.c builtins.h: mkbuiltins builtins.def
 	sh ./mkbuiltins builtins.def
@@ -54,3 +52,6 @@ init.c: mkinit
 	./mkinit ${SHSRCS}
 
 toybox.o: ../lib/toybox/generated/newtoys.h
+
+%.o: %.c ${GENHDRS}
+	${CC} ${CFLAGS} -c $< -o $@
