Build musl from release tarball

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -6,11 +6,13 @@ COPY $BOOTSH /bin/sh
 SHELL ["/bin/sh", "-c"]
 CMD ["/bin/sh"]
 
-COPY musl-1.2.5 /src/musl
-COPY build-musl.sh /src/musl/build.sh
-COPY musl-sources.txt /src/musl/sources.txt
-COPY syscall_arch_x86_64.h /src/musl/arch/x86_64/syscall_arch.h
-WORKDIR /src/musl
+ADD https://musl.libc.org/releases/musl-1.2.5.tar.gz /src/musl-1.2.5.tar.gz
+WORKDIR /src
+RUN tar -xf musl-1.2.5.tar.gz
+WORKDIR /src/musl-1.2.5
+COPY build-musl.sh build.sh
+COPY musl-sources.txt sources.txt
+COPY syscall_arch_x86_64.h arch/x86_64/syscall_arch.h
 RUN rm -rf src/complex src/math/x86_64 crt/x86_64 && \
     sed -i s/@PLT//g src/signal/x86_64/sigsetjmp.s && \
     ./build.sh
@@ -41,9 +43,9 @@ COPY test/wak.c /bin/awk
 COPY test/muxzcat.c /bin/xzcat
 
 # COPY test/sed.c /bin/sed
-COPY test/tar.c /bin/tar
-COPY test/*.flags.h /bin/
-COPY test/libtoys /lib/libtoys
+# COPY test/tar.c /bin/tar
+# COPY test/*.flags.h /bin/
+# COPY test/libtoys /lib/libtoys
 
 ADD https://ftp.gnu.org/gnu/make/make-4.4.tar.gz /src/make-4.4.tar.gz
 WORKDIR /src
