Minimise toybox config

--- a/src/Makefile
+++ b/src/Makefile
@@ -17,12 +17,12 @@ CFLAGS+= -DHAVE_CONFIG_H -I. -I.. -include ../config.h -DBSD=1 -DSHELL -DDEBUG=1
 CFLAGS+= '-DCONFIG_TRIPLET="x86_64-linux-gnu"' -DTCC_TARGET_X86_64 -DONE_SOURCE=0
 CFLAGS+= -DCONFIG_TCC_BCHECK=0 -DCONFIG_TCC_BACKTRACE=0
 
-all: dash
+all: ash
 
-dash: ${GENHDRS} libtcc1a.h ${OBJS} ${STATIC_LIBS}
+ash: ${GENHDRS} libtcc1a.h ${OBJS} ${STATIC_LIBS}
 	${CC} -o $@ ${OBJS} ${STATIC_LIBS} ${LDFLAGS} ${LIBS}
 
-CLEANFILES= ${GENSRCS} ${GENHDRS} ${OBJS} dash mknodes mksyntax mkinit
+CLEANFILES= ${GENSRCS} ${GENHDRS} ${OBJS} ash mknodes mksyntax mkinit
 
 clean:
 	rm -f ${CLEANFILES}
