--- a/toybox.config
+++ b/toybox.config
@@ -5,94 +5,94 @@ CONFIG_TOYBOX_FORK=y
 # Posix commands
 #
 CONFIG_BASENAME=y
-CONFIG_CAL=y
+# CONFIG_CAL is not set
 CONFIG_CAT=y
 CONFIG_CHGRP=y
 CONFIG_CHOWN=y
 CONFIG_CHMOD=y
-CONFIG_CKSUM=y
-CONFIG_CRC32=y
+# CONFIG_CKSUM is not set
+# CONFIG_CRC32 is not set
 CONFIG_CMP=y
-CONFIG_COMM=y
+# CONFIG_COMM is not set
 CONFIG_CP=y
 CONFIG_MV=y
 CONFIG_INSTALL=y
-CONFIG_CPIO=y
+# CONFIG_CPIO is not set
 CONFIG_CUT=y
 CONFIG_DATE=y
 CONFIG_DD=y
-CONFIG_DF=y
+# CONFIG_DF is not set
 CONFIG_DIRNAME=y
-CONFIG_DU=y
+# CONFIG_DU is not set
 CONFIG_ECHO=y
-CONFIG_ENV=y
-CONFIG_EXPAND=y
-CONFIG_FALSE=y
+# CONFIG_ENV is not set
+# CONFIG_EXPAND is not set
+# CONFIG_FALSE is not set
 CONFIG_FILE=y
 CONFIG_FIND=y
-CONFIG_FOLD=y
+# CONFIG_FOLD is not set
 CONFIG_GETCONF=y
 CONFIG_GREP=y
 CONFIG_EGREP=y
 CONFIG_FGREP=y
 CONFIG_HEAD=y
 # CONFIG_ICONV is not set
-CONFIG_ID=y
+# CONFIG_ID is not set
 # CONFIG_ID_Z is not set
-CONFIG_GROUPS=y
-CONFIG_LOGNAME=y
-CONFIG_WHOAMI=y
-CONFIG_KILL=y
-CONFIG_KILLALL5=y
+# CONFIG_GROUPS is not set
+# CONFIG_LOGNAME is not set
+# CONFIG_WHOAMI is not set
+# CONFIG_KILL is not set
+# CONFIG_KILLALL5 is not set
 CONFIG_LINK=y
 CONFIG_LN=y
-CONFIG_LOGGER=y
+# CONFIG_LOGGER is not set
 CONFIG_LS=y
 CONFIG_MKDIR=y
 # CONFIG_MKDIR_Z is not set
 CONFIG_MKFIFO=y
 # CONFIG_MKFIFO_Z is not set
-CONFIG_NICE=y
+# CONFIG_NICE is not set
 CONFIG_NL=y
-CONFIG_NOHUP=y
+# CONFIG_NOHUP is not set
 CONFIG_OD=y
-CONFIG_PASTE=y
+# CONFIG_PASTE is not set
 CONFIG_PATCH=y
-CONFIG_PRINTF=y
+# CONFIG_PRINTF is not set
 # CONFIG_PS is not set
 # CONFIG_TOP is not set
 # CONFIG_IOTOP is not set
 # CONFIG_PGREP is not set
 # CONFIG_PKILL is not set
-CONFIG_PWD=y
-CONFIG_RENICE=y
+# CONFIG_PWD is not set
+# CONFIG_RENICE is not set
 CONFIG_RM=y
 CONFIG_RMDIR=y
 CONFIG_SED=y
 CONFIG_SLEEP=y
 CONFIG_SORT=y
-CONFIG_SORT_FLOAT=y
-CONFIG_SPLIT=y
-CONFIG_STRINGS=y
+# CONFIG_SORT_FLOAT is not set
+# CONFIG_SPLIT is not set
+# CONFIG_STRINGS is not set
 CONFIG_TAIL=y
 CONFIG_TAR=y
 CONFIG_TEE=y
-CONFIG_TEST=y
-CONFIG_TEST_GLUE=y
-CONFIG_TIME=y
+# CONFIG_TEST is not set
+# CONFIG_TEST_GLUE is not set
+# CONFIG_TIME is not set
 CONFIG_TOUCH=y
-CONFIG_TRUE=y
-CONFIG_TSORT=y
-CONFIG_TTY=y
-CONFIG_ULIMIT=y
+# CONFIG_TRUE is not set
+# CONFIG_TSORT is not set
+# CONFIG_TTY is not set
+# CONFIG_ULIMIT is not set
 CONFIG_ARCH=y
 CONFIG_UNAME=y
 CONFIG_UNIQ=y
-CONFIG_UNLINK=y
-CONFIG_UUDECODE=y
-CONFIG_UUENCODE=y
+# CONFIG_UNLINK is not set
+# CONFIG_UUDECODE is not set
+# CONFIG_UUENCODE is not set
 CONFIG_WC=y
-CONFIG_WHO=y
+# CONFIG_WHO is not set
 CONFIG_XARGS=y
 
 #
@@ -181,165 +181,165 @@ CONFIG_TR=y
 #
 # Other commands
 #
-CONFIG_ACPI=y
-CONFIG_ASCII=y
-CONFIG_UNICODE=y
-CONFIG_BASE64=y
-CONFIG_BASE32=y
+# CONFIG_ACPI is not set
+# CONFIG_ASCII is not set
+# CONFIG_UNICODE is not set
+# CONFIG_BASE64 is not set
+# CONFIG_BASE32 is not set
 # CONFIG_BLKDISCARD is not set
-CONFIG_BLKID=y
-CONFIG_FSTYPE=y
+# CONFIG_BLKID is not set
+# CONFIG_FSTYPE is not set
 # CONFIG_BLOCKDEV is not set
-CONFIG_BUNZIP2=y
-CONFIG_BZCAT=y
+# CONFIG_BUNZIP2 is not set
+# CONFIG_BZCAT is not set
 # CONFIG_CHCON is not set
-CONFIG_CHROOT=y
-CONFIG_CHRT=y
-CONFIG_CLEAR=y
-CONFIG_COUNT=y
-CONFIG_DEVMEM=y
-CONFIG_DOS2UNIX=y
-CONFIG_UNIX2DOS=y
+# CONFIG_CHROOT is not set
+# CONFIG_CHRT is not set
+# CONFIG_CLEAR is not set
+# CONFIG_COUNT is not set
+# CONFIG_DEVMEM is not set
+# CONFIG_DOS2UNIX is not set
+# CONFIG_UNIX2DOS is not set
 # CONFIG_EJECT is not set
-CONFIG_FACTOR=y
-CONFIG_FALLOCATE=y
-CONFIG_FLOCK=y
-CONFIG_FMT=y
-CONFIG_FREE=y
-CONFIG_FREERAMDISK=y
+# CONFIG_FACTOR is not set
+# CONFIG_FALLOCATE is not set
+# CONFIG_FLOCK is not set
+# CONFIG_FMT is not set
+# CONFIG_FREE is not set
+# CONFIG_FREERAMDISK is not set
 # CONFIG_FSFREEZE is not set
-CONFIG_FSYNC=y
-CONFIG_GETOPT=y
+# CONFIG_FSYNC is not set
+# CONFIG_GETOPT is not set
 # CONFIG_GPIODETECT is not set
 # CONFIG_GPIOFIND is not set
 # CONFIG_GPIOINFO is not set
 # CONFIG_GPIOGET is not set
 # CONFIG_GPIOSET is not set
-CONFIG_HELP=y
-CONFIG_HEXEDIT=y
+# CONFIG_HELP is not set
+# CONFIG_HEXEDIT is not set
 # CONFIG_HWCLOCK is not set
 # CONFIG_I2CDETECT is not set
 # CONFIG_I2CDUMP is not set
 # CONFIG_I2CGET is not set
 # CONFIG_I2CSET is not set
 # CONFIG_I2CTRANSFER is not set
-CONFIG_INOTIFYD=y
-CONFIG_INSMOD=y
-CONFIG_IONICE=y
-CONFIG_IORENICE=y
-CONFIG_LINUX32=y
+# CONFIG_INOTIFYD is not set
+# CONFIG_INSMOD is not set
+# CONFIG_IONICE is not set
+# CONFIG_IORENICE is not set
+# CONFIG_LINUX32 is not set
 # CONFIG_LOGIN is not set
 # CONFIG_LOSETUP is not set
 # CONFIG_LSATTR is not set
 # CONFIG_CHATTR is not set
-CONFIG_LSMOD=y
-CONFIG_LSPCI=y
-CONFIG_LSUSB=y
-CONFIG_MAKEDEVS=y
-CONFIG_MCOOKIE=y
-CONFIG_MEMEATER=y
+# CONFIG_LSMOD is not set
+# CONFIG_LSPCI is not set
+# CONFIG_LSUSB is not set
+# CONFIG_MAKEDEVS is not set
+# CONFIG_MCOOKIE is not set
+# CONFIG_MEMEATER is not set
 # CONFIG_MIX is not set
 # CONFIG_MKPASSWD is not set
-CONFIG_MKSWAP=y
-CONFIG_MODINFO=y
-CONFIG_MOUNTPOINT=y
+# CONFIG_MKSWAP is not set
+# CONFIG_MODINFO is not set
+# CONFIG_MOUNTPOINT is not set
 # CONFIG_NBD_CLIENT is not set
 # CONFIG_NBD_SERVER is not set
 # CONFIG_UNSHARE is not set
 # CONFIG_NSENTER is not set
-CONFIG_ONEIT=y
+# CONFIG_ONEIT is not set
 # CONFIG_OPENVT is not set
 # CONFIG_CHVT is not set
 # CONFIG_DEALLOCVT is not set
-CONFIG_PARTPROBE=y
-CONFIG_PIVOT_ROOT=y
-CONFIG_PMAP=y
-CONFIG_PRINTENV=y
-CONFIG_PWDX=y
-CONFIG_PWGEN=y
-CONFIG_READAHEAD=y
-CONFIG_READELF=y
+# CONFIG_PARTPROBE is not set
+# CONFIG_PIVOT_ROOT is not set
+# CONFIG_PMAP is not set
+# CONFIG_PRINTENV is not set
+# CONFIG_PWDX is not set
+# CONFIG_PWGEN is not set
+# CONFIG_READAHEAD is not set
+# CONFIG_READELF is not set
 CONFIG_READLINK=y
-CONFIG_REALPATH=y
-CONFIG_REBOOT=y
-CONFIG_RESET=y
-CONFIG_REV=y
-CONFIG_RMMOD=y
+# CONFIG_REALPATH is not set
+# CONFIG_REBOOT is not set
+# CONFIG_RESET is not set
+# CONFIG_REV is not set
+# CONFIG_RMMOD is not set
 # CONFIG_RTCWAKE is not set
-CONFIG_SETFATTR=y
-CONFIG_SETSID=y
-CONFIG_SHA3SUM=y
-CONFIG_SHRED=y
-CONFIG_SHUF=y
-CONFIG_STAT=y
-CONFIG_SWAPOFF=y
-CONFIG_SWAPON=y
-CONFIG_SWITCH_ROOT=y
-CONFIG_SYSCTL=y
-CONFIG_TAC=y
+# CONFIG_SETFATTR is not set
+# CONFIG_SETSID is not set
+# CONFIG_SHA3SUM is not set
+# CONFIG_SHRED is not set
+# CONFIG_SHUF is not set
+# CONFIG_STAT is not set
+# CONFIG_SWAPOFF is not set
+# CONFIG_SWAPON is not set
+# CONFIG_SWITCH_ROOT is not set
+# CONFIG_SYSCTL is not set
+# CONFIG_TAC is not set
 CONFIG_NPROC=y
-CONFIG_TASKSET=y
-CONFIG_TIMEOUT=y
-CONFIG_TRUNCATE=y
-CONFIG_TS=y
-CONFIG_UCLAMPSET=y
-CONFIG_UPTIME=y
-CONFIG_USLEEP=y
-CONFIG_UUIDGEN=y
+# CONFIG_TASKSET is not set
+# CONFIG_TIMEOUT is not set
+# CONFIG_TRUNCATE is not set
+# CONFIG_TS is not set
+# CONFIG_UCLAMPSET is not set
+# CONFIG_UPTIME is not set
+# CONFIG_USLEEP is not set
+# CONFIG_UUIDGEN is not set
 # CONFIG_VCONFIG is not set
-CONFIG_VMSTAT=y
-CONFIG_W=y
-CONFIG_WATCH=y
+# CONFIG_VMSTAT is not set
+# CONFIG_W is not set
+# CONFIG_WATCH is not set
 # CONFIG_WATCHDOG is not set
-CONFIG_WHICH=y
-CONFIG_XXD=y
-CONFIG_YES=y
+# CONFIG_WHICH is not set
+# CONFIG_XXD is not set
+# CONFIG_YES is not set
 
 #
 # Networking commands
 #
-CONFIG_FTPGET=y
-CONFIG_FTPPUT=y
-CONFIG_HOST=y
-CONFIG_HTTPD=y
-CONFIG_IFCONFIG=y
-CONFIG_MICROCOM=y
-CONFIG_NETCAT=y
-CONFIG_NETSTAT=y
-CONFIG_PING=y
+# CONFIG_FTPGET is not set
+# CONFIG_FTPPUT is not set
+# CONFIG_HOST is not set
+# CONFIG_HTTPD is not set
+# CONFIG_IFCONFIG is not set
+# CONFIG_MICROCOM is not set
+# CONFIG_NETCAT is not set
+# CONFIG_NETSTAT is not set
+# CONFIG_PING is not set
 # CONFIG_RFKILL is not set
-CONFIG_SNTP=y
+# CONFIG_SNTP is not set
 # CONFIG_TUNCTL is not set
-CONFIG_WGET=y
+# CONFIG_WGET is not set
 # CONFIG_WGET_LIBTLS is not set
 
 #
 # Linux Standard Base commands
 #
-CONFIG_DMESG=y
+# CONFIG_DMESG is not set
 CONFIG_GZIP=y
 CONFIG_GUNZIP=y
 CONFIG_ZCAT=y
 CONFIG_HOSTNAME=y
-CONFIG_DNSDOMAINNAME=y
-CONFIG_KILLALL=y
-CONFIG_MD5SUM=y
-CONFIG_SHA1SUM=y
-CONFIG_SHA224SUM=y
-CONFIG_SHA256SUM=y
-CONFIG_SHA384SUM=y
-CONFIG_SHA512SUM=y
-CONFIG_MKNOD=y
+# CONFIG_DNSDOMAINNAME is not set
+# CONFIG_KILLALL is not set
+# CONFIG_MD5SUM is not set
+# CONFIG_SHA1SUM is not set
+# CONFIG_SHA224SUM is not set
+# CONFIG_SHA256SUM is not set
+# CONFIG_SHA384SUM is not set
+# CONFIG_SHA512SUM is not set
+# CONFIG_MKNOD is not set
 # CONFIG_MKNOD_Z is not set
 CONFIG_MKTEMP=y
-CONFIG_MOUNT=y
+# CONFIG_MOUNT is not set
 # CONFIG_PASSWD is not set
 # CONFIG_PASSWD_SAD is not set
-CONFIG_PIDOF=y
-CONFIG_SEQ=y
+# CONFIG_PIDOF is not set
+# CONFIG_SEQ is not set
 # CONFIG_SU is not set
-CONFIG_SYNC=y
-CONFIG_UMOUNT=y
+# CONFIG_SYNC is not set
+# CONFIG_UMOUNT is not set
 
 #
 # Example commands
