Remove musl-sources.txt

--- a/toybox.config
+++ b/toybox.config
@@ -13,7 +13,7 @@ CONFIG_CHMOD=y
 # CONFIG_CKSUM is not set
 # CONFIG_CRC32 is not set
 CONFIG_CMP=y
-# CONFIG_COMM is not set
+CONFIG_COMM=y
 CONFIG_CP=y
 CONFIG_MV=y
 CONFIG_INSTALL=y
